commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/office-runtime/officeruntime.storage.yml
+++ b/docs/docs-ref-autogen/excel_1_9/office-runtime/officeruntime.storage.yml
@@ -1,8 +1,11 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office-runtime!OfficeRuntime.Storage:interface'
-    summary: '<span data-ttu-id="9cb75-101">异步、全局和永久的键-值存储。</span><span class="sxs-lookup"><span data-stu-id="9cb75-101">Asynchronous, global, and persistent key-value storage.</span></span>'
-    remarks: '<span data-ttu-id="9cb75-102">每个域的存储限制为 10 MB，可由多个加载项共享。</span><span class="sxs-lookup"><span data-stu-id="9cb75-102">Storage limit is 10 MB per domain, which may be shared by multiple add-ins.</span></span>'
+    summary: |-
+      异步、全局和永久的键-值存储。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
+    remarks: 每个域的存储限制为 10 MB，可由多个加载项共享。
     name: OfficeRuntime.Storage
     fullName: OfficeRuntime.Storage
     langs:
@@ -18,7 +21,10 @@ items:
       - 'office-runtime!OfficeRuntime.Storage#setItem:member(1)'
       - 'office-runtime!OfficeRuntime.Storage#setItems:member(1)'
   - uid: 'office-runtime!OfficeRuntime.Storage#getItem:member(1)'
-    summary: '<span data-ttu-id="9cb75-103">根据存储项从存储中检索项。</span><span class="sxs-lookup"><span data-stu-id="9cb75-103">Retrieves an item from storage based on its key.</span></span> <span data-ttu-id="9cb75-104">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9cb75-104">Returns a Promise.</span></span> <span data-ttu-id="9cb75-105">在承诺未解决的情况下，返回 null。</span><span class="sxs-lookup"><span data-stu-id="9cb75-105">In the event the Promise does not resolve, returns null.</span></span>'
+    summary: |-
+      根据存储项从存储中检索项。 返回一个承诺。 在承诺未解决的情况下，返回 null。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -32,11 +38,14 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="9cb75-106">要检索的项的键。</span><span class="sxs-lookup"><span data-stu-id="9cb75-106">Key of item to be retrieved.</span></span> <span data-ttu-id="9cb75-107">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="9cb75-107">Must be a string.</span></span>
+          description: 要检索的项的键。 必须是字符串。
           type:
             - string
   - uid: 'office-runtime!OfficeRuntime.Storage#getItems:member(1)'
-    summary: '<span data-ttu-id="9cb75-108">根据存储的密钥从存储中检索多个项目。</span><span class="sxs-lookup"><span data-stu-id="9cb75-108">Retrieves multiple items from storage based on their key.</span></span> <span data-ttu-id="9cb75-109">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9cb75-109">Returns a Promise.</span></span> <span data-ttu-id="9cb75-110">在承诺未解决的情况下，返回 null。</span><span class="sxs-lookup"><span data-stu-id="9cb75-110">In the event the Promise does not resolve, returns null.</span></span>'
+    summary: |-
+      根据存储的密钥从存储中检索多个项目。 返回一个承诺。 在承诺未解决的情况下，返回 null。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: getItems(keys)
     fullName: getItems(keys)
     langs:
@@ -50,11 +59,14 @@ items:
         description: ''
       parameters:
         - id: keys
-          description: <span data-ttu-id="9cb75-111">要删除的项的键。</span><span class="sxs-lookup"><span data-stu-id="9cb75-111">Keys of items to be removed.</span></span> <span data-ttu-id="9cb75-112">必须是字符串数组。</span><span class="sxs-lookup"><span data-stu-id="9cb75-112">Must be an array of strings.</span></span>
+          description: 要删除的项的键。 必须是字符串数组。
           type:
             - 'string[]'
   - uid: 'office-runtime!OfficeRuntime.Storage#getKeys:member(1)'
-    summary: <span data-ttu-id="9cb75-113">从存储中检索所有键的数组。</span><span class="sxs-lookup"><span data-stu-id="9cb75-113">Retrieves an array of all keys from storage.</span></span> <span data-ttu-id="9cb75-114">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9cb75-114">Returns a Promise.</span></span>
+    summary: |-
+      从存储中检索所有键的数组。 返回一个承诺。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: getKeys()
     fullName: getKeys()
     langs:
@@ -67,7 +79,10 @@ items:
           - 'office-runtime!OfficeRuntime.Storage#getKeys~0:complex'
         description: ''
   - uid: 'office-runtime!OfficeRuntime.Storage#removeItem:member(1)'
-    summary: <span data-ttu-id="9cb75-115">基于项的项从存储区中移除项。</span><span class="sxs-lookup"><span data-stu-id="9cb75-115">Removes an item from storage based on its key.</span></span> <span data-ttu-id="9cb75-116">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9cb75-116">Returns a Promise.</span></span>
+    summary: |-
+      基于项的项从存储区中移除项。 返回一个承诺。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: removeItem(key)
     fullName: removeItem(key)
     langs:
@@ -81,11 +96,14 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="9cb75-117">要删除的项的键。</span><span class="sxs-lookup"><span data-stu-id="9cb75-117">Key of item to be removed.</span></span> <span data-ttu-id="9cb75-118">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="9cb75-118">Must be a string.</span></span>
+          description: 要删除的项的键。 必须是字符串。
           type:
             - string
   - uid: 'office-runtime!OfficeRuntime.Storage#removeItems:member(1)'
-    summary: <span data-ttu-id="9cb75-119">从存储中删除多个项目。</span><span class="sxs-lookup"><span data-stu-id="9cb75-119">Removes multiple items from storage.</span></span> <span data-ttu-id="9cb75-120">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9cb75-120">Returns a Promise.</span></span>
+    summary: |-
+      从存储中删除多个项目。 返回一个承诺。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: removeItems(keys)
     fullName: removeItems(keys)
     langs:
@@ -99,11 +117,14 @@ items:
         description: ''
       parameters:
         - id: keys
-          description: <span data-ttu-id="9cb75-121">要删除的项的键。</span><span class="sxs-lookup"><span data-stu-id="9cb75-121">Keys of items to be removed.</span></span> <span data-ttu-id="9cb75-122">必须是字符串数组。</span><span class="sxs-lookup"><span data-stu-id="9cb75-122">Must be an array of strings.</span></span>
+          description: 要删除的项的键。 必须是字符串数组。
           type:
             - 'string[]'
   - uid: 'office-runtime!OfficeRuntime.Storage#setItem:member(1)'
-    summary: <span data-ttu-id="9cb75-123">将键/值对设置为存储或更新现有的键值对。</span><span class="sxs-lookup"><span data-stu-id="9cb75-123">Sets a key-value pair into storage or updates an existing key-value pair.</span></span> <span data-ttu-id="9cb75-124">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9cb75-124">Returns a Promise.</span></span>
+    summary: |-
+      将键/值对设置为存储或更新现有的键值对。 返回一个承诺。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: 'setItem(key, value)'
     fullName: 'setItem(key, value)'
     langs:
@@ -117,15 +138,18 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="9cb75-125">要设置的项的键。</span><span class="sxs-lookup"><span data-stu-id="9cb75-125">Key of item to be set.</span></span> <span data-ttu-id="9cb75-126">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="9cb75-126">Must be a string.</span></span>
+          description: 要设置的项的键。 必须是字符串。
           type:
             - string
         - id: value
-          description: <span data-ttu-id="9cb75-127">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="9cb75-127">Must be a string.</span></span>
+          description: 必须是字符串。
           type:
             - string
   - uid: 'office-runtime!OfficeRuntime.Storage#setItems:member(1)'
-    summary: <span data-ttu-id="9cb75-128">将多个项目设置为存储或更新存储中的多个项目。</span><span class="sxs-lookup"><span data-stu-id="9cb75-128">Sets multiple items into storage or updates multiple items within storage.</span></span> <span data-ttu-id="9cb75-129">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9cb75-129">Returns a Promise.</span></span>
+    summary: |-
+      将多个项目设置为存储或更新存储中的多个项目。 返回一个承诺。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: setItems(keyValues)
     fullName: setItems(keyValues)
     langs:
@@ -139,7 +163,7 @@ items:
         description: ''
       parameters:
         - id: keyValues
-          description: <span data-ttu-id="9cb75-130">要设置的键/值对。</span><span class="sxs-lookup"><span data-stu-id="9cb75-130">Key-value pairs to be set.</span></span> <span data-ttu-id="9cb75-131">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="9cb75-131">Must be strings.</span></span>
+          description: 要设置的键/值对。 必须是字符串。
           type:
             - '{ [key: string]: string }'
 references:
