--- a/docs/docs-ref-autogen/office/office/office.file.yml
+++ b/docs/docs-ref-autogen/office/office/office.file.yml
@@ -1,8 +1,8 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.File:interface'
-    summary: <span data-ttu-id="e5566-101">表示与 Office 外接程序关联的文档文件。</span><span class="sxs-lookup"><span data-stu-id="e5566-101">Represents the document file associated with an Office Add-in.</span></span>
-    remarks: <span data-ttu-id="e5566-102">在传递给 Document.getfileasync 方法的回调函数中使用 AsyncResult 属性访问 File 对象。</span><span class="sxs-lookup"><span data-stu-id="e5566-102">Access the File object with the AsyncResult.value property in the callback function passed to the Document.getFileAsync method.</span></span>
+    summary: 表示与 Office 外接程序关联的文档文件。
+    remarks: 在传递给 Document.getfileasync 方法的回调函数中使用 AsyncResult 属性访问 File 对象。
     name: Office.File
     fullName: Office.File
     langs:
@@ -15,15 +15,15 @@ items:
       - 'office!Office.File#size:member'
       - 'office!Office.File#sliceCount:member'
   - uid: 'office!Office.File#closeAsync:member(1)'
-    summary: <span data-ttu-id="e5566-103">关闭文档文件。</span><span class="sxs-lookup"><span data-stu-id="e5566-103">Closes the document file.</span></span>
+    summary: 关闭文档文件。
     remarks: |-
-      <span data-ttu-id="e5566-104">**要求集**：[文件](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#file)</span><span class="sxs-lookup"><span data-stu-id="e5566-104">**Requirement set**: [File](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#file)</span></span>
+      **要求集**：[文件](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#file)
 
-      <span data-ttu-id="e5566-105">内存中不允许两个以上的文档；否则 Document.getFileAsync 操作将会失败。</span><span class="sxs-lookup"><span data-stu-id="e5566-105">No more than two documents are allowed to be in memory; otherwise the Document.getFileAsync operation will fail.</span></span> <span data-ttu-id="e5566-106">处理完文件后，使用 File.closeAsync 方法关闭文件。</span><span class="sxs-lookup"><span data-stu-id="e5566-106">Use the File.closeAsync method to close the file when you are finished working with it.</span></span>
+      内存中不允许两个以上的文档；否则 Document.getFileAsync 操作将会失败。 处理完文件后，使用 File.closeAsync 方法关闭文件。
 
-      <span data-ttu-id="e5566-107">在传递给 closeAsync 方法的回调函数中，您可以使用 AsyncResult 对象的属性返回以下信息。</span><span class="sxs-lookup"><span data-stu-id="e5566-107">In the callback function passed to the closeAsync method, you can use the properties of the AsyncResult object to return the following information.</span></span>
+      在传递给 closeAsync 方法的回调函数中，您可以使用 AsyncResult 对象的属性返回以下信息。
 
-      <table> <tr> <th><span data-ttu-id="e5566-108">属性</span><span class="sxs-lookup"><span data-stu-id="e5566-108">Property</span></span></th> <th><span data-ttu-id="e5566-109">用于...</span><span class="sxs-lookup"><span data-stu-id="e5566-109">Use to...</span></span></th> </tr> <tr> <td><span data-ttu-id="e5566-110">AsyncResult.value</span><span class="sxs-lookup"><span data-stu-id="e5566-110">AsyncResult.value</span></span></td> <td><span data-ttu-id="e5566-111">始终返回 undefined，这是因为没有要检索的对象或数据。</span><span class="sxs-lookup"><span data-stu-id="e5566-111">Always returns undefined because there is no object or data to retrieve.</span></span></td> </tr> <tr> <td><span data-ttu-id="e5566-112">AsyncResult.status</span><span class="sxs-lookup"><span data-stu-id="e5566-112">AsyncResult.status</span></span></td> <td><span data-ttu-id="e5566-113">确定操作是成功还是失败。</span><span class="sxs-lookup"><span data-stu-id="e5566-113">Determine the success or failure of the operation.</span></span></td> </tr> <tr> <td><span data-ttu-id="e5566-114">AsyncResult.error</span><span class="sxs-lookup"><span data-stu-id="e5566-114">AsyncResult.error</span></span></td> <td><span data-ttu-id="e5566-115">如果操作失败，则访问提供错误信息的 Error 对象。</span><span class="sxs-lookup"><span data-stu-id="e5566-115">Access an Error object that provides error information if the operation failed.</span></span></td> </tr> <tr> <td><span data-ttu-id="e5566-116">AsyncResult.asyncContext</span><span class="sxs-lookup"><span data-stu-id="e5566-116">AsyncResult.asyncContext</span></span></td> <td><span data-ttu-id="e5566-117">在 AsyncResult 对象中未经改动的返回的任何类型的用户定义项。</span><span class="sxs-lookup"><span data-stu-id="e5566-117">A user-defined item of any type that is returned in the AsyncResult object without being altered.</span></span></td> </tr> </table>
+      <table> <tr> <th>属性</th> <th>用于...</th> </tr> <tr> <td>AsyncResult.value</td> <td>始终返回 undefined，这是因为没有要检索的对象或数据。</td> </tr> <tr> <td>AsyncResult.status</td> <td>确定操作是成功还是失败。</td> </tr> <tr> <td>AsyncResult.error</td> <td>如果操作失败，则访问提供错误信息的 Error 对象。</td> </tr> <tr> <td>AsyncResult.asyncContext</td> <td>在 AsyncResult 对象中未经改动的返回的任何类型的用户定义项。</td> </tr> </table>
     name: closeAsync(callback)
     fullName: closeAsync(callback)
     langs:
@@ -37,17 +37,66 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: '<span data-ttu-id="e5566-118">可选。</span><span class="sxs-lookup"><span data-stu-id="e5566-118">Optional.</span></span> <span data-ttu-id="e5566-119">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="e5566-119">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="e5566-120">.</span><span class="sxs-lookup"><span data-stu-id="e5566-120"></span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->.'
           type:
             - 'office!Office.File#closeAsync~0:complex'
   - uid: 'office!Office.File#getSliceAsync:member(1)'
-    summary: <span data-ttu-id="e5566-121">返回指定的切片。</span><span class="sxs-lookup"><span data-stu-id="e5566-121">Returns the specified slice.</span></span>
+    summary: 返回指定的切片。
     remarks: |-
-      <span data-ttu-id="e5566-122">**要求集**：[文件](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#file)</span><span class="sxs-lookup"><span data-stu-id="e5566-122">**Requirement set**: [File](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#file)</span></span>
+      **要求集**：[文件](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#file)
 
-      <span data-ttu-id="e5566-123">在传递给 getSliceAsync 方法的回调函数中，您可以使用 AsyncResult 对象的属性返回以下信息。</span><span class="sxs-lookup"><span data-stu-id="e5566-123">In the callback function passed to the getSliceAsync method, you can use the properties of the AsyncResult object to return the following information.</span></span>
+      在传递给 getSliceAsync 方法的回调函数中，您可以使用 AsyncResult 对象的属性返回以下信息。
 
-      <table> <tr> <th><span data-ttu-id="e5566-124">属性</span><span class="sxs-lookup"><span data-stu-id="e5566-124">Property</span></span></th> <th><span data-ttu-id="e5566-125">用于...</span><span class="sxs-lookup"><span data-stu-id="e5566-125">Use to...</span></span></th> </tr> <tr> <td><span data-ttu-id="e5566-126">AsyncResult.value</span><span class="sxs-lookup"><span data-stu-id="e5566-126">AsyncResult.value</span></span></td> <td><span data-ttu-id="e5566-127">访问 Slice 对象。</span><span class="sxs-lookup"><span data-stu-id="e5566-127">Access the Slice object.</span></span></td> </tr> <tr> <td><span data-ttu-id="e5566-128">AsyncResult.status</span><span class="sxs-lookup"><span data-stu-id="e5566-128">AsyncResult.status</span></span></td> <td><span data-ttu-id="e5566-129">确定操作是成功还是失败。</span><span class="sxs-lookup"><span data-stu-id="e5566-129">Determine the success or failure of the operation.</span></span></td> </tr> <tr> <td><span data-ttu-id="e5566-130">AsyncResult.error</span><span class="sxs-lookup"><span data-stu-id="e5566-130">AsyncResult.error</span></span></td> <td><span data-ttu-id="e5566-131">如果操作失败，则访问提供错误信息的 Error 对象。</span><span class="sxs-lookup"><span data-stu-id="e5566-131">Access an Error object that provides error information if the operation failed.</span></span></td> </tr> <tr> <td><span data-ttu-id="e5566-132">AsyncResult.asyncContext</span><span class="sxs-lookup"><span data-stu-id="e5566-132">AsyncResult.asyncContext</span></span></td> <td><span data-ttu-id="e5566-133">在 AsyncResult 对象中未经改动的返回的任何类型的用户定义项。</span><span class="sxs-lookup"><span data-stu-id="e5566-133">A user-defined item of any type that is returned in the AsyncResult object without being altered.</span></span></td> </tr> </table>
+      <table> <tr> <th>属性</th> <th>用于...</th> </tr> <tr> <td>AsyncResult.value</td> <td>访问 Slice 对象。</td> </tr> <tr> <td>AsyncResult.status</td> <td>确定操作是成功还是失败。</td> </tr> <tr> <td>AsyncResult.error</td> <td>如果操作失败，则访问提供错误信息的 Error 对象。</td> </tr> <tr> <td>AsyncResult.asyncContext</td> <td>在 AsyncResult 对象中未经改动的返回的任何类型的用户定义项。</td> </tr> </table>
+
+      #### <a name="examples"></a>示例
+
+      ```typescript
+      // This sample shows how to get all the slices of a file. 
+      // The asynchronous operation returns a Promise so it can be awaited.
+      private getAllSlices(file: any): Promise<any> {
+          var self = this;
+          var isError = false;
+
+          return new Promise(async (resolve, reject) => {
+              var documentFileData = [];
+              for (var sliceIndex = 0; (sliceIndex < file.sliceCount) && !isError; sliceIndex++) {
+                  var sliceReadPromise = new Promise((sliceResolve, sliceReject) => {
+                      file.getSliceAsync(sliceIndex, (asyncResult) => {
+                          if (asyncResult.status === Office.AsyncResultStatus.Succeeded) {
+                              documentFileData = documentFileData.concat(asyncResult.value.data);
+                              sliceResolve({
+                                  IsSuccess: true,
+                                  Data: documentFileData
+                              });
+                          } else {
+                              file.closeAsync();
+                              sliceReject({
+                                  IsSuccess: false,
+                                  ErrorMessage: `Error in reading the slice: ${sliceIndex} of the document`
+                              });
+                          }
+                      });
+                  });
+                  await sliceReadPromise.catch((error) => {
+                      isError = true;
+                  });
+              }
+
+              if (isError || !documentFileData.length) {
+                  reject('Error while reading document. Please try it again.');
+                  return;
+              }
+
+              file.closeAsync();
+
+              resolve({
+                  IsSuccess: true,
+                  Data: documentFileData
+              });
+          });
+      }
+      ```
     name: 'getSliceAsync(sliceIndex, callback)'
     fullName: 'getSliceAsync(sliceIndex, callback)'
     langs:
@@ -61,15 +110,15 @@ items:
         description: ''
       parameters:
         - id: sliceIndex
-          description: <span data-ttu-id="e5566-134">Specifies the zero-based index of the slice to be retrieved.</span><span class="sxs-lookup"><span data-stu-id="e5566-134">Specifies the zero-based index of the slice to be retrieved.</span></span> <span data-ttu-id="e5566-135">Required.</span><span class="sxs-lookup"><span data-stu-id="e5566-135">Required.</span></span>
+          description: Specifies the zero-based index of the slice to be retrieved. Required.
           type:
             - number
         - id: callback
-          description: '<span data-ttu-id="e5566-136">可选。</span><span class="sxs-lookup"><span data-stu-id="e5566-136">Optional.</span></span> <span data-ttu-id="e5566-137">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="e5566-137">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="e5566-138">.</span><span class="sxs-lookup"><span data-stu-id="e5566-138"></span></span> <span data-ttu-id="e5566-139">结果`value`的属性为 "Office"[切片](xref:office!Office.Slice:interface)对象。</span><span class="sxs-lookup"><span data-stu-id="e5566-139">The `value` property of the result is the [Office.Slice](xref:office!Office.Slice:interface) object.</span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性为 "Office"[切片](xref:office!Office.Slice:interface)对象。'
           type:
             - 'office!Office.File#getSliceAsync~0:complex'
   - uid: 'office!Office.File#size:member'
-    summary: <span data-ttu-id="e5566-140">获取以字节为单位的文档文件大小。</span><span class="sxs-lookup"><span data-stu-id="e5566-140">Gets the document file size in bytes.</span></span>
+    summary: 获取以字节为单位的文档文件大小。
     name: size
     fullName: size
     langs:
@@ -81,7 +130,7 @@ items:
         type:
           - number
   - uid: 'office!Office.File#sliceCount:member'
-    summary: <span data-ttu-id="e5566-141">获取文件分为的切片数。</span><span class="sxs-lookup"><span data-stu-id="e5566-141">Gets the number of slices into which the file is divided.</span></span>
+    summary: 获取文件分为的切片数。
     name: sliceCount
     fullName: sliceCount
     langs:
