--- a/docs/docs-ref-autogen/excel_1_9/office-runtime/officeruntime.dialog.yml
+++ b/docs/docs-ref-autogen/excel_1_9/office-runtime/officeruntime.dialog.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office-runtime!OfficeRuntime.Dialog:interface'
-    summary: <span data-ttu-id="9fe1c-101">表示对话框的对象。</span><span class="sxs-lookup"><span data-stu-id="9fe1c-101">Object representing the dialog box.</span></span>
+    summary: 表示对话框的对象。
     name: OfficeRuntime.Dialog
     fullName: OfficeRuntime.Dialog
     langs:
@@ -11,7 +11,10 @@ items:
     children:
       - 'office-runtime!OfficeRuntime.Dialog#close:member(1)'
   - uid: 'office-runtime!OfficeRuntime.Dialog#close:member(1)'
-    summary: <span data-ttu-id="9fe1c-102">用于关闭对话框的方法。</span><span class="sxs-lookup"><span data-stu-id="9fe1c-102">Method to close a dialog box.</span></span> <span data-ttu-id="9fe1c-103">返回一个承诺。</span><span class="sxs-lookup"><span data-stu-id="9fe1c-103">Returns a Promise.</span></span>
+    summary: |-
+      用于关闭对话框的方法。 返回一个承诺。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: close()
     fullName: close()
     langs:
