--- a/docs/docs-ref-autogen/excel_1_9/office-runtime/officeruntime.displaywebdialogoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/office-runtime/officeruntime.displaywebdialogoptions.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-    summary: <span data-ttu-id="e4879-101">提供对话框可能采用的显示选项和操作。</span><span class="sxs-lookup"><span data-stu-id="e4879-101">Provides display options and actions a dialog box may take.</span></span>
+    summary: 提供对话框可能采用的显示选项和操作。
     name: OfficeRuntime.DisplayWebDialogOptions
     fullName: OfficeRuntime.DisplayWebDialogOptions
     langs:
@@ -16,7 +16,10 @@ items:
       - 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#onRuntimeError:member'
       - 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#width:member'
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#displayInIFrame:member'
-    summary: <span data-ttu-id="e4879-102">用于确定对话框是显示为弹出窗口（false）还是在 IFrame 中显示的可选参数（true）。</span><span class="sxs-lookup"><span data-stu-id="e4879-102">Optional parameter that determines whether the dialog box displays as a popup (false) or within an IFrame (true).</span></span> <span data-ttu-id="e4879-103">此设置仅适用于在 Excel Online 上运行的自定义函数。</span><span class="sxs-lookup"><span data-stu-id="e4879-103">This setting is only applicable to custom functions running on Excel Online.</span></span>
+    summary: |-
+      用于确定对话框是显示为弹出窗口（false）还是在 IFrame 中显示的可选参数（true）。 此设置仅适用于在 Excel Online 上运行的自定义函数。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: displayInIFrame
     fullName: displayInIFrame
     langs:
@@ -28,7 +31,10 @@ items:
         type:
           - boolean
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#height:member'
-    summary: '<span data-ttu-id="e4879-104">可选参数，用于定义对话框的高度，以当前显示的百分比形式表示。</span><span class="sxs-lookup"><span data-stu-id="e4879-104">Optional parameter that defines the height of the dialog box as a percentage of the current display.</span></span> <span data-ttu-id="e4879-105">例如，接受以下字符串： '' 50% ''，'' 50 ''。</span><span class="sxs-lookup"><span data-stu-id="e4879-105">For example, accepts strings such as: ''50%'', ''50''.</span></span>'
+    summary: |-
+      可选参数，用于定义对话框的高度，以当前显示的百分比形式表示。 例如，接受以下字符串： ' 50% '，' 50 '。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: height
     fullName: height
     langs:
@@ -40,7 +46,10 @@ items:
         type:
           - string
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#onClose:member'
-    summary: <span data-ttu-id="e4879-106">在对话框关闭时运行的可选回调。</span><span class="sxs-lookup"><span data-stu-id="e4879-106">Optional callback that runs when the dialog box is closed.</span></span>
+    summary: |-
+      在对话框关闭时运行的可选回调。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: onClose
     fullName: onClose
     langs:
@@ -52,7 +61,10 @@ items:
         type:
           - () => void
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#onMessage:member'
-    summary: <span data-ttu-id="e4879-107">当对话框向其父消息发送邮件时运行的可选回调。</span><span class="sxs-lookup"><span data-stu-id="e4879-107">Optional callback that runs when the dialog box sends a message to its parent.</span></span>
+    summary: |-
+      当对话框向其父消息发送邮件时运行的可选回调。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: onMessage
     fullName: onMessage
     langs:
@@ -64,7 +76,10 @@ items:
         type:
           - 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#onMessage~0:complex'
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#onRuntimeError:member'
-    summary: <span data-ttu-id="e4879-108">当对话框发送错误时运行的可选回调。</span><span class="sxs-lookup"><span data-stu-id="e4879-108">Optional callback that runs when the dialog box sends an error.</span></span>
+    summary: |-
+      当对话框发送错误时运行的可选回调。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: onRuntimeError
     fullName: onRuntimeError
     langs:
@@ -76,7 +91,10 @@ items:
         type:
           - 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#onRuntimeError~0:complex'
   - uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions#width:member'
-    summary: '<span data-ttu-id="e4879-109">可选参数，用于将对话框的宽度定义为窗口的百分比。</span><span class="sxs-lookup"><span data-stu-id="e4879-109">Optional parameter that defines the width of dialog as a percentage of window.</span></span> <span data-ttu-id="e4879-110">例如，接受以下字符串： '' 50% ''，'' 50 ''。</span><span class="sxs-lookup"><span data-stu-id="e4879-110">For example, accepts strings such as: ''50%'', ''50''.</span></span>'
+    summary: |-
+      可选参数，用于将对话框的宽度定义为窗口的百分比。 例如，接受以下字符串： ' 50% '，' 50 '。
+
+      \[[API 集： CustomFunctionsRuntime 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]
     name: width
     fullName: width
     langs:
