--- a/docs/docs-ref-autogen/word_1_1/word/word.contentcontrolcollection.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.contentcontrolcollection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'word!Word.ContentControlCollection:class'
     summary: |-
-      <span data-ttu-id="99d94-101">包含[ContentControl](xref:word!Word.ContentControl:class)对象的集合。</span><span class="sxs-lookup"><span data-stu-id="99d94-101">Contains a collection of [Word.ContentControl](xref:word!Word.ContentControl:class) objects.</span></span> <span data-ttu-id="99d94-102">内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。</span><span class="sxs-lookup"><span data-stu-id="99d94-102">Content controls are bounded and potentially labeled regions in a document that serve as containers for specific types of content.</span></span> <span data-ttu-id="99d94-103">单个内容控件可能包含诸如图片、表或格式化文本段落等内容。</span><span class="sxs-lookup"><span data-stu-id="99d94-103">Individual content controls may contain contents such as images, tables, or paragraphs of formatted text.</span></span> <span data-ttu-id="99d94-104">当前仅支持富文本内容控件。</span><span class="sxs-lookup"><span data-stu-id="99d94-104">Currently, only rich text content controls are supported.</span></span>
+      包含[ContentControl](xref:word!Word.ContentControl:class)对象的集合。 内容控件是文档中绑定的、有可能添加标签的区域，它们充当特定类型的内容的容器。 单个内容控件可能包含诸如图片、表或格式化文本段落等内容。 当前仅支持富文本内容控件。
 
-      <span data-ttu-id="99d94-105">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99d94-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.ContentControlCollection
     fullName: Word.ContentControlCollection
     langs:
@@ -27,7 +27,7 @@ items:
       - 'word!Word.ContentControlCollection#track:member(1)'
       - 'word!Word.ContentControlCollection#untrack:member(1)'
   - uid: 'word!Word.ContentControlCollection#context:member'
-    summary: <span data-ttu-id="99d94-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="99d94-106">The request context associated with the object.</span></span> <span data-ttu-id="99d94-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="99d94-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -40,9 +40,9 @@ items:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.ContentControlCollection#getById:member(1)'
     summary: |-
-      <span data-ttu-id="99d94-108">按其标识符获取内容控件。</span><span class="sxs-lookup"><span data-stu-id="99d94-108">Gets a content control by its identifier.</span></span> <span data-ttu-id="99d94-109">如果此集合中没有带有标识符的内容控件，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="99d94-109">Throws an error if there isn't a content control with the identifier in this collection.</span></span>
+      按其标识符获取内容控件。 如果此集合中没有带有标识符的内容控件，则会引发错误。
 
-      <span data-ttu-id="99d94-110">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99d94-110">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getById(id)
     fullName: getById(id)
     langs:
@@ -56,7 +56,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="99d94-111">示例</span><span class="sxs-lookup"><span data-stu-id="99d94-111">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Run a batch operation against the Word object model.
@@ -110,14 +110,14 @@ items:
           ```
       parameters:
         - id: id
-          description: <span data-ttu-id="99d94-112">必需。</span><span class="sxs-lookup"><span data-stu-id="99d94-112">Required.</span></span> <span data-ttu-id="99d94-113">内容控件的标识符。</span><span class="sxs-lookup"><span data-stu-id="99d94-113">A content control identifier.</span></span>
+          description: 必填。 内容控件的标识符。
           type:
             - number
   - uid: 'word!Word.ContentControlCollection#getByTag:member(1)'
     summary: |-
-      <span data-ttu-id="99d94-114">获取具有指定标记的内容控件。</span><span class="sxs-lookup"><span data-stu-id="99d94-114">Gets the content controls that have the specified tag.</span></span>
+      获取具有指定标记的内容控件。
 
-      <span data-ttu-id="99d94-115">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99d94-115">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getByTag(tag)
     fullName: getByTag(tag)
     langs:
@@ -131,7 +131,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="99d94-116">示例</span><span class="sxs-lookup"><span data-stu-id="99d94-116">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Run a batch operation against the Word object model.
@@ -182,14 +182,14 @@ items:
           ```
       parameters:
         - id: tag
-          description: <span data-ttu-id="99d94-117">必需。</span><span class="sxs-lookup"><span data-stu-id="99d94-117">Required.</span></span> <span data-ttu-id="99d94-118">在内容控件上设置的标记。</span><span class="sxs-lookup"><span data-stu-id="99d94-118">A tag set on a content control.</span></span>
+          description: 必填。 在内容控件上设置的标记。
           type:
             - string
   - uid: 'word!Word.ContentControlCollection#getByTitle:member(1)'
     summary: |-
-      <span data-ttu-id="99d94-119">获取具有指定标题的内容控件。</span><span class="sxs-lookup"><span data-stu-id="99d94-119">Gets the content controls that have the specified title.</span></span>
+      获取具有指定标题的内容控件。
 
-      <span data-ttu-id="99d94-120">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99d94-120">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getByTitle(title)
     fullName: getByTitle(title)
     langs:
@@ -203,7 +203,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="99d94-121">示例</span><span class="sxs-lookup"><span data-stu-id="99d94-121">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Run a batch operation against the Word object model.
@@ -241,14 +241,14 @@ items:
           ```
       parameters:
         - id: title
-          description: <span data-ttu-id="99d94-122">必需。</span><span class="sxs-lookup"><span data-stu-id="99d94-122">Required.</span></span> <span data-ttu-id="99d94-123">内容控件的标题。</span><span class="sxs-lookup"><span data-stu-id="99d94-123">The title of a content control.</span></span>
+          description: 必需。 内容控件的标题。
           type:
             - string
   - uid: 'word!Word.ContentControlCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="99d94-124">按其在集合中的索引获取内容控件。</span><span class="sxs-lookup"><span data-stu-id="99d94-124">Gets a content control by its index in the collection.</span></span>
+      按其在集合中的索引获取内容控件。
 
-      <span data-ttu-id="99d94-125">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="99d94-125">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: getItem(index)
     fullName: getItem(index)
     langs:
@@ -262,11 +262,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="99d94-126">索引。</span><span class="sxs-lookup"><span data-stu-id="99d94-126">The index.</span></span>
+          description: 索引。
           type:
             - number
   - uid: 'word!Word.ContentControlCollection#items:member'
-    summary: <span data-ttu-id="99d94-127">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="99d94-127">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -278,17 +278,17 @@ items:
         type:
           - 'word!Word.ContentControlCollection#items~0:complex'
   - uid: 'word!Word.ContentControlCollection#load:member(1)'
-    summary: <span data-ttu-id="99d94-128">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="99d94-128">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="99d94-129">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="99d94-129">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="99d94-130">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="99d94-130">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="99d94-131">`load(option?: string | string[]): Word.ContentControlCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="99d94-131">`load(option?: string | string[]): Word.ContentControlCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Word.ContentControlCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="99d94-132">`load(option?: { select?: string; expand?: string; }): Word.ContentControlCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="99d94-132">`load(option?: { select?: string; expand?: string; }): Word.ContentControlCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Word.ContentControlCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="99d94-133">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.ContentControlCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="99d94-133">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.ContentControlCollection` - Only available on collection types.</span></span> <span data-ttu-id="99d94-134">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="99d94-134">It is similar to the preceding signature.</span></span> <span data-ttu-id="99d94-135">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="99d94-135">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="99d94-136">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="99d94-136">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="99d94-137">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="99d94-137">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.ContentControlCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
 
-      #### <a name="examples"></a><span data-ttu-id="99d94-138">示例</span><span class="sxs-lookup"><span data-stu-id="99d94-138">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       // Run a batch operation against the Word object model.
@@ -311,6 +311,7 @@ items:
                   contentControls.items[0].load(  'appearance,' +
                                                   'cannotDelete,' +
                                                   'cannotEdit,' +
+                                                  'color,' +
                                                   'id,' +
                                                   'placeHolderText,' +
                                                   'removeWhenEdited,' +
@@ -375,7 +376,7 @@ items:
           type:
             - 'word!Word.ContentControlCollection#load~0:complex'
   - uid: 'word!Word.ContentControlCollection#load:member(2)'
-    summary: <span data-ttu-id="99d94-139">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="99d94-139">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="99d94-140">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="99d94-140">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -389,7 +390,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="99d94-141">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="99d94-141">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'word!Word.ContentControlCollection#load:member(3)'
@@ -410,7 +411,7 @@ items:
           type:
             - 'word!OfficeExtension.LoadOption:interface'
   - uid: 'word!Word.ContentControlCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="99d94-142">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="99d94-142">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="99d94-143">.</span><span class="sxs-lookup"><span data-stu-id="99d94-143"></span></span> <span data-ttu-id="99d94-144">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="99d94-144"></span></span><!-- --><span data-ttu-id="99d94-145">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.ContentControlCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.ContentControlCollectionData`</span><span class="sxs-lookup"><span data-stu-id="99d94-145">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Word.ContentControlCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Word.Interfaces.ContentControlCollectionData`</span></span><!-- --><span data-ttu-id="99d94-146">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="99d94-146">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.ContentControlCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.ContentControlCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -423,7 +424,7 @@ items:
           - 'word!Word.Interfaces.ContentControlCollectionData:interface'
         description: ''
   - uid: 'word!Word.ContentControlCollection#track:member(1)'
-    summary: '<span data-ttu-id="99d94-147">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="99d94-147">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="99d94-148">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="99d94-148">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="99d94-149">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="99d94-149">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -436,7 +437,7 @@ items:
           - 'word!Word.ContentControlCollection:class'
         description: ''
   - uid: 'word!Word.ContentControlCollection#untrack:member(1)'
-    summary: '<span data-ttu-id="99d94-150">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="99d94-150">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="99d94-151">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="99d94-151">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="99d94-152">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="99d94-152">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="99d94-153">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="99d94-153">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
