--- a/docs/docs-ref-autogen/excel_1_5/toc.yml
+++ b/docs/docs-ref-autogen/excel_1_5/toc.yml
@@ -178,13 +178,17 @@ items:
             uid: 'excel!Excel.ChartTitle:class'
           - name: ChartTitleFormat
             uid: 'excel!Excel.ChartTitleFormat:class'
+          - name: CommentMention
+            uid: 'excel!Excel.CommentMention:interface'
+          - name: CommentRichContent
+            uid: 'excel!Excel.CommentRichContent:interface'
           - name: CustomXmlPart
             uid: 'excel!Excel.CustomXmlPart:class'
           - name: CustomXmlPartCollection
             uid: 'excel!Excel.CustomXmlPartCollection:class'
           - name: CustomXmlPartScopedCollection
             uid: 'excel!Excel.CustomXmlPartScopedCollection:class'
-          - name: 筛选
+          - name: 筛选器
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -230,13 +234,13 @@ items:
             uid: 'excel!Excel.RequestContext:class'
           - name: RunOptions
             uid: 'excel!Excel.RunOptions:interface'
-          - name: 语言
+          - name: 运行时
             uid: 'excel!Excel.Runtime:class'
           - name: SelectionChangedEventArgs
             uid: 'excel!Excel.SelectionChangedEventArgs:interface'
           - name: 会话
             uid: 'excel!Excel.Session:class'
-          - name: 设置
+          - name: Setting
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -258,7 +262,7 @@ items:
             uid: 'excel!Excel.TableRowCollection:class'
           - name: TableSort
             uid: 'excel!Excel.TableSort:class'
-          - name: Workbook
+          - name: 工作簿
             uid: 'excel!Excel.Workbook:class'
           - name: Worksheet
             uid: 'excel!Excel.Worksheet:class'
@@ -271,7 +275,7 @@ items:
       - name: 通用 API
         uid: office!
         items:
-          - name: Office
+          - name: 办公室
             items:
               - name: 枚举
                 uid: ''
@@ -360,15 +364,15 @@ items:
                 uid: 'office!Office.CustomXmlParts:interface'
               - name: CustomXmlPrefixMappings
                 uid: 'office!Office.CustomXmlPrefixMappings:interface'
-              - name: Dialog
+              - name: 对话框
                 uid: 'office!Office.Dialog:interface'
               - name: DialogOptions
                 uid: 'office!Office.DialogOptions:interface'
-              - name: Document
+              - name: 文档
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: 错误
+              - name: Error
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -436,7 +440,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: 错误
+              - name: Error
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
