--- a/docs/docs-ref-autogen/office/office/office.document.yml
+++ b/docs/docs-ref-autogen/office/office/office.document.yml
@@ -82,7 +82,7 @@ items:
           type:
             - 'office!Office.EventType:enum'
         - id: handler
-          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必填。'
+          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必需。'
           type:
             - any
         - id: options
@@ -352,7 +352,7 @@ items:
           type:
             - 'office!Office.EventType:enum'
         - id: handler
-          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必填。'
+          description: '要添加的事件处理程序函数，其唯一的参数的类型为[DocumentSelectionChangedEventArgs](xref:office!Office.DocumentSelectionChangedEventArgs:interface)<!-- -->. 必需。'
           type:
             - any
         - id: callback
@@ -486,7 +486,7 @@ items:
           type:
             - 'office!Office.Document#getActiveViewAsync~1:complex'
   - uid: 'office!Office.Document#getFileAsync:member(1)'
-    summary: 以高达 4194304 字节 (4 MB) 的切片形式返回整个文档文件。 对于 iOS 上的外接程序，支持最高为65536的文件切片（64 KB）。 请注意，若指定文件切片的大小上限超出允许限制，则会导致一个“内部错误”故障。
+    summary: 以高达 4194304 字节 (4 MB) 的切片形式返回整个文档文件。 对于 iPad 上的外接程序，支持最高为65536的文件切片（64 KB）。 请注意，若指定文件切片的大小上限超出允许限制，则会导致一个“内部错误”故障。
     remarks: |-
       **要求集**：
 
@@ -496,17 +496,11 @@ items:
 
       - [TextFile](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#textfile) （使用时`Office.FileType.Text`<!-- -->)
 
-      对于在 iOS 上的 Office 之外的 Office 主机应用程序中运行的外接程序，Document.getfileasync 方法支持获取最多为4194304字节（4 MB）的切片中的文件。 对于在 iOS 上运行的 Office 应用程序中运行的外接程序，Document.getfileasync 方法支持获取最高为65536的切片中的文件（64 KB）。
+      对于在 iPad 之外的 office 主机应用程序中运行的外接程序， `getFileAsync`此方法支持获取最多为4194304字节（4 MB）的切片中的文件。 对于在 iPad 上的 Office 应用程序中运行的外`getFileAsync`接程序，此方法支持获取最高为65536（64 KB）的切片中的文件。
 
-      可以使用 " [Office 文件类型](xref:office!Office.FileType:enum)" 枚举或文本值指定文件类型参数。 但可能的值因主机而异：
+      可以`fileType`使用[Office 文件类型](xref:office!Office.FileType:enum)枚举或文本值指定该参数。 但可能的值因主机而异：
 
-      在 web 和 Windows 桌面上的 Excel：`Office.FileType.Compressed`
-
-      Mac 上的 Excel：`Office.FileType.Compressed`<!-- -->, `Office.FileType.Pdf`
-
-      PowerPoint 在 web、Windows desktop、Mac 和 iPad 上：`Office.FileType.Compressed`<!-- -->, `Office.FileType.Pdf`
-
-      Word 网页版、Windows desktop、Mac 和 iPad：`Office.FileType.Compressed`<!-- -->, `Office.FileType.Pdf`<!-- -->, `Office.FileType.Text`
+      *支持的 FileTypes，按平台* <table> <tr><th> </th><th> Windows 版 Office </th><th> Office 网页版 </th><th> iPad 版 Office </th><th> Mac 版 Office </th></tr> <tr><td><strong>Excel</strong></td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td><td> `Compressed`<!-- -->, `Pdf` </td><td> </td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td></tr> <tr><td><strong>PowerPoint</strong></td><td> `Compressed`<!-- -->, `Pdf` </td><td> `Compressed`<!-- -->, `Pdf` </td><td> `Compressed`<!-- -->, `Pdf` </td><td> `Compressed`<!-- -->, `Pdf` </td></tr> <tr><td><strong>Word</strong></td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td><td> `Compressed` </td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td></tr> </table>
 
       #### <a name="examples"></a>示例
 
@@ -619,7 +613,7 @@ items:
           type:
             - 'office!Office.Document#getFileAsync~0:complex'
   - uid: 'office!Office.Document#getFileAsync:member(2)'
-    summary: 以高达 4194304 字节 (4 MB) 的切片形式返回整个文档文件。 对于 iOS 上的外接程序，支持最高为65536的文件切片（64 KB）。 请注意，若指定文件切片的大小上限超出允许限制，则会导致一个“内部错误”故障。
+    summary: 以高达 4194304 字节 (4 MB) 的切片形式返回整个文档文件。 对于 iPad 上的外接程序，支持最高为65536的文件切片（64 KB）。 请注意，若指定文件切片的大小上限超出允许限制，则会导致一个“内部错误”故障。
     remarks: |-
       **要求集**：
 
@@ -629,17 +623,11 @@ items:
 
       - [TextFile](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#textfile) （使用时`Office.FileType.Text`<!-- -->)
 
-      对于在 iOS 上的 Office 之外的 Office 主机应用程序中运行的外接程序，Document.getfileasync 方法支持获取最多为4194304字节（4 MB）的切片中的文件。 对于在 iOS 应用上运行在 Office 中的外接程序，Document.getfileasync 方法支持获取最高为65536的切片中的文件（64 KB）。
+      对于在 iPad 之外的 office 主机应用程序中运行的外接程序， `getFileAsync`此方法支持获取最多为4194304字节（4 MB）的切片中的文件。 对于在 iPad 应用程序上运行的外接程序， `getFileAsync`此方法支持获取最高为65536（64 KB）的切片中的文件。
 
-      可以使用 " [Office 文件类型](xref:office!Office.FileType:enum)" 枚举或文本值指定文件类型参数。 但可能的值因主机而异：
+      可以`fileType`使用[Office 文件类型](xref:office!Office.FileType:enum)枚举或文本值指定该参数。 但可能的值因主机而异：
 
-      在 web 和 Windows 桌面上的 Excel：`Office.FileType.Compressed`
-
-      Mac 上的 Excel：`Office.FileType.Compressed`<!-- -->, `Office.FileType.Pdf`
-
-      PowerPoint 在 web、Windows desktop、Mac 和 iPad 上：`Office.FileType.Compressed`<!-- -->, `Office.FileType.Pdf`
-
-      Word 网页版、Windows desktop、Mac 和 iPad：`Office.FileType.Compressed`<!-- -->, `Office.FileType.Pdf`<!-- -->, `Office.FileType.Text`
+      *支持的 FileTypes，按平台* <table> <tr><th> </th><th> Windows 版 Office </th><th> Office 网页版 </th><th> iPad 版 Office </th><th> Mac 版 Office </th></tr> <tr><td><strong>Excel</strong></td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td><td> `Compressed`<!-- -->, `Pdf` </td><td> </td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td></tr> <tr><td><strong>PowerPoint</strong></td><td> `Compressed`<!-- -->, `Pdf` </td><td> `Compressed`<!-- -->, `Pdf` </td><td> `Compressed`<!-- -->, `Pdf` </td><td> `Compressed`<!-- -->, `Pdf` </td></tr> <tr><td><strong>Word</strong></td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td><td> `Compressed` </td><td> `Compressed`<!-- -->, `Pdf`<!-- -->, `Text` </td></tr> </table>
     name: 'getFileAsync(fileType, callback)'
     fullName: 'getFileAsync(fileType, callback)'
     langs:
