commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.iconset.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.iconset.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.IconSet:enum'
-    summary: '<span data-ttu-id="16c8d-101">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="16c8d-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.IconSet
     fullName: Excel.IconSet
     langs:
@@ -20,8 +20,6 @@ items:
       - 'excel!Excel.IconSet.fourRedToBlack:member'
       - 'excel!Excel.IconSet.fourTrafficLights:member'
       - 'excel!Excel.IconSet.invalid:member'
-      - 'excel!Excel.IconSet.linkedEntityFinanceIcon:member'
-      - 'excel!Excel.IconSet.linkedEntityMapIcon:member'
       - 'excel!Excel.IconSet.threeArrows:member'
       - 'excel!Excel.IconSet.threeArrowsGray:member'
       - 'excel!Excel.IconSet.threeFlags:member'
@@ -109,20 +107,6 @@ items:
       - typeScript
     type: field
     numericValue: '"Invalid"'
-  - uid: 'excel!Excel.IconSet.linkedEntityFinanceIcon:member'
-    name: linkedEntityFinanceIcon
-    fullName: linkedEntityFinanceIcon
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"LinkedEntityFinanceIcon"'
-  - uid: 'excel!Excel.IconSet.linkedEntityMapIcon:member'
-    name: linkedEntityMapIcon
-    fullName: linkedEntityMapIcon
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"LinkedEntityMapIcon"'
   - uid: 'excel!Excel.IconSet.threeArrows:member'
     name: threeArrows
     fullName: threeArrows
