--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.entities.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.entities.yml
@@ -2,25 +2,23 @@
 items:
   - uid: 'outlook!Office.Entities:interface'
     summary: |-
-      <span data-ttu-id="fdb0e-101">表示电子邮件或约会中找到的实体集合。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-101">Represents a collection of entities found in an email message or appointment.</span></span> <span data-ttu-id="fdb0e-102">仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-102">Read mode only.</span></span>
+      表示电子邮件或约会中找到的实体集合。 仅限阅读模式。
 
-      <span data-ttu-id="fdb0e-103">当项目（电子邮件或约会）包含已由服务器找到的一个或多个实体时，entity 对象是 getEntities 和 getEntitiesByType 方法返回的实体数组的容器。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-103">The Entities object is a container for the entity arrays returned by the getEntities and getEntitiesByType methods when the item (either an email message or an appointment) contains one or more entities that have been found by the server.</span></span> <span data-ttu-id="fdb0e-104">可以使用代码中的这些实体为查看器提供附加上下文信息，如对项目中找到的地址的映射或打开项目中找到的电话号码的拨号程序。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-104">You can use these entities in your code to provide additional context information to the viewer, such as a map to an address found in the item, or to open a dialer for a phone number found in the item.</span></span>
+      当项目（电子邮件或约会）包含已由服务器找到的一个或多个实体时，entity 对象是 getEntities 和 getEntitiesByType 方法返回的实体数组的容器。 可以使用代码中的这些实体为查看器提供附加上下文信息，如对项目中找到的地址的映射或打开项目中找到的电话号码的拨号程序。
 
-      <span data-ttu-id="fdb0e-105">如果项中不存在属性中指定类型的任何实体，则与该实体关联的属性为 null。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-105">If no entities of the type specified in the property are present in the item, the property associated with that entity is null.</span></span> <span data-ttu-id="fdb0e-106">例如，如果邮件包含街道地址和电话号码，则 addresses 属性和 phoneNumbers 属性将包含信息，其他属性将为 null。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-106">For example, if a message contains a street address and a phone number, the addresses property and phoneNumbers property would contain information, and the other properties would be null.</span></span>
+      如果项中不存在属性中指定类型的任何实体，则与该实体关联的属性为 null。 例如，如果邮件包含街道地址和电话号码，则 addresses 属性和 phoneNumbers 属性将包含信息，其他属性将为 null。
 
-      <span data-ttu-id="fdb0e-107">若要被识别为地址，字符串必须包含至少具有街道编号、街道名称、城市、州和邮政编码等元素的子集的美国通讯地址。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-107">To be recognized as an address, the string must contain a United States postal address that has at least a subset of the elements of a street number, street name, city, state, and zip code.</span></span>
+      若要被识别为地址，字符串必须包含至少具有街道编号、街道名称、城市、州和邮政编码等元素的子集的美国通讯地址。
 
-      <span data-ttu-id="fdb0e-108">若要被识别为电话号码，字符串必须包含北美电话号码格式。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-108">To be recognized as a phone number, the string must contain a North American phone number format.</span></span>
+      若要被识别为电话号码，字符串必须包含北美电话号码格式。
 
-      <span data-ttu-id="fdb0e-p104">实体识别有赖于基于计算机了解大量数据的自然语言识别。实体的识别是不确定的，其成功有时取决于项中的特定上下文。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-p104">Entity recognition relies on natural language recognition that is based on machine learning of large amounts of data. The recognition of an entity is non-deterministic and success sometimes relies on the particular context in the item.</span></span>
+      实体识别有赖于基于计算机了解大量数据的自然语言识别。实体的识别是不确定的，其成功有时取决于项中的特定上下文。
 
-      <span data-ttu-id="fdb0e-111">当属性数组由 getEntitiesByType 方法返回时，仅指定实体的属性包含数据;所有其他属性均为 null。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-111">When the property arrays are returned by the getEntitiesByType method, only the property for the specified entity contains data; all other properties are null.</span></span>
-
-      <span data-ttu-id="fdb0e-112">\[[API 集：邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fdb0e-112">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+      当属性数组由 getEntitiesByType 方法返回时，仅指定实体的属性包含数据;所有其他属性均为 null。
     remarks: |-
-      <span data-ttu-id="fdb0e-113">**[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem</span><span class="sxs-lookup"><span data-stu-id="fdb0e-113">**[Minimum permission level](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**: ReadItem</span></span>
+      **[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)<!-- -->**： ReadItem
 
-      <span data-ttu-id="fdb0e-114">**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：读取</span><span class="sxs-lookup"><span data-stu-id="fdb0e-114">**[Applicable Outlook mode](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: Read</span></span>
+      **[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：读取
     name: Office.Entities
     fullName: Office.Entities
     langs:
@@ -36,7 +34,7 @@ items:
       - 'outlook!Office.Entities#taskSuggestions:member'
       - 'outlook!Office.Entities#urls:member'
   - uid: 'outlook!Office.Entities#addresses:member'
-    summary: <span data-ttu-id="fdb0e-115">获取在电子邮件或约会中找到的物理地址（街道或邮寄地址）。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-115">Gets the physical addresses (street or mailing addresses) found in an email message or appointment.</span></span>
+    summary: 获取在电子邮件或约会中找到的物理地址（街道或邮寄地址）。
     name: addresses
     fullName: addresses
     langs:
@@ -50,14 +48,14 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="fdb0e-116">示例</span><span class="sxs-lookup"><span data-stu-id="fdb0e-116">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var item = Office.context.mailbox.item;
           var addresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.Address);
           ```
   - uid: 'outlook!Office.Entities#contacts:member'
-    summary: <span data-ttu-id="fdb0e-117">获取电子邮件地址或约会中找到的联系人。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-117">Gets the contacts found in an email address or appointment.</span></span>
+    summary: 获取电子邮件地址或约会中找到的联系人。
     name: contacts
     fullName: contacts
     langs:
@@ -71,14 +69,14 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="fdb0e-118">示例</span><span class="sxs-lookup"><span data-stu-id="fdb0e-118">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var item = Office.context.mailbox.item;
           var contacts = item.getEntitiesByType(Office.MailboxEnums.EntityType.Contact);
           ```
   - uid: 'outlook!Office.Entities#emailAddresses:member'
-    summary: <span data-ttu-id="fdb0e-119">获取电子邮件或约会中找到的电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-119">Gets the email addresses found in an email message or appointment.</span></span>
+    summary: 获取电子邮件或约会中找到的电子邮件地址。
     name: emailAddresses
     fullName: emailAddresses
     langs:
@@ -92,14 +90,14 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="fdb0e-120">示例</span><span class="sxs-lookup"><span data-stu-id="fdb0e-120">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var item = Office.context.mailbox.item;
           var emailAddresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.EmailAddress);
           ```
   - uid: 'outlook!Office.Entities#meetingSuggestions:member'
-    summary: <span data-ttu-id="fdb0e-121">获取电子邮件中找到的会议建议。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-121">Gets the meeting suggestions found in an email message.</span></span>
+    summary: 获取电子邮件中找到的会议建议。
     name: meetingSuggestions
     fullName: meetingSuggestions
     langs:
@@ -113,14 +111,14 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="fdb0e-122">示例</span><span class="sxs-lookup"><span data-stu-id="fdb0e-122">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var item = Office.context.mailbox.item;
           var meetingSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.MeetingSuggestion);
           ```
   - uid: 'outlook!Office.Entities#phoneNumbers:member'
-    summary: <span data-ttu-id="fdb0e-123">获取电子邮件或约会中找到的电话号码。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-123">Gets the phone numbers found in an email message or appointment.</span></span>
+    summary: 获取电子邮件或约会中找到的电话号码。
     name: phoneNumbers
     fullName: phoneNumbers
     langs:
@@ -134,14 +132,14 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="fdb0e-124">示例</span><span class="sxs-lookup"><span data-stu-id="fdb0e-124">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var item = Office.context.mailbox.item;
           var phoneNumbers = item.getEntitiesByType(Office.MailboxEnums.EntityType.PhoneNumber);
           ```
   - uid: 'outlook!Office.Entities#taskSuggestions:member'
-    summary: <span data-ttu-id="fdb0e-125">获取电子邮件或约会中找到的任务建议。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-125">Gets the task suggestions found in an email message or appointment.</span></span>
+    summary: 获取电子邮件或约会中找到的任务建议。
     name: taskSuggestions
     fullName: taskSuggestions
     langs:
@@ -155,14 +153,14 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="fdb0e-126">示例</span><span class="sxs-lookup"><span data-stu-id="fdb0e-126">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var item = Office.context.mailbox.item;
           var taskSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.TaskSuggestion);
           ```
   - uid: 'outlook!Office.Entities#urls:member'
-    summary: <span data-ttu-id="fdb0e-127">获取电子邮件或约会中呈现的 Internet URL。</span><span class="sxs-lookup"><span data-stu-id="fdb0e-127">Gets the Internet URLs present in an email message or appointment.</span></span>
+    summary: 获取电子邮件或约会中呈现的 Internet URL。
     name: urls
     fullName: urls
     langs:
@@ -176,7 +174,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="fdb0e-128">示例</span><span class="sxs-lookup"><span data-stu-id="fdb0e-128">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var item = Office.context.mailbox.item;
