--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.iconsetconditionalformat.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.iconsetconditionalformat.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.IconSetConditionalFormat:class'
     summary: |-
-      <span data-ttu-id="60484-101">表示条件格式的 IconSet 条件。</span><span class="sxs-lookup"><span data-stu-id="60484-101">Represents an IconSet criteria for conditional formatting.</span></span>
+      表示条件格式的 IconSet 条件。
 
-      <span data-ttu-id="60484-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60484-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.IconSetConditionalFormat
     fullName: Excel.IconSetConditionalFormat
     langs:
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.IconSetConditionalFormat#style:member'
       - 'excel!Excel.IconSetConditionalFormat#toJSON:member(1)'
   - uid: 'excel!Excel.IconSetConditionalFormat#context:member'
-    summary: <span data-ttu-id="60484-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="60484-103">The request context associated with the object.</span></span> <span data-ttu-id="60484-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="60484-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -39,9 +39,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.IconSetConditionalFormat#criteria:member'
     summary: |-
-      <span data-ttu-id="60484-105">用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。</span><span class="sxs-lookup"><span data-stu-id="60484-105">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="60484-106">请注意，对于第一个条件，只有自定义图标可以修改，而类型、公式和运算符在设置时将被忽略。</span><span class="sxs-lookup"><span data-stu-id="60484-106">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
+      用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。 请注意，对于第一个条件，只有自定义图标可以修改，而类型、公式和运算符在设置时将被忽略。
 
-      <span data-ttu-id="60484-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60484-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: criteria
     fullName: criteria
     langs:
@@ -55,7 +55,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="60484-108">示例</span><span class="sxs-lookup"><span data-stu-id="60484-108">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```typescript
           await Excel.run(async (context) => {
@@ -98,7 +98,7 @@ items:
           });
           ```
   - uid: 'excel!Excel.IconSetConditionalFormat#load:member(1)'
-    summary: <span data-ttu-id="60484-109">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="60484-109">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="60484-110">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="60484-110">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -112,11 +112,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="60484-111">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="60484-111">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions:interface'
   - uid: 'excel!Excel.IconSetConditionalFormat#load:member(2)'
-    summary: <span data-ttu-id="60484-112">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="60484-112">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="60484-113">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="60484-113">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -130,11 +130,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="60484-114">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="60484-114">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.IconSetConditionalFormat#load:member(3)'
-    summary: <span data-ttu-id="60484-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="60484-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="60484-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="60484-116">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -152,7 +152,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="60484-117">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="60484-117">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -161,9 +161,9 @@ items:
                       }
   - uid: 'excel!Excel.IconSetConditionalFormat#reverseIconOrder:member'
     summary: |-
-      <span data-ttu-id="60484-118">如果为 true，则反转 IconSet 的图标订单。</span><span class="sxs-lookup"><span data-stu-id="60484-118">If true, reverses the icon orders for the IconSet.</span></span> <span data-ttu-id="60484-119">请注意，如果使用自定义图标，则不能设置此设置。</span><span class="sxs-lookup"><span data-stu-id="60484-119">Note that this cannot be set if custom icons are used.</span></span>
+      如果为 true，则反转 IconSet 的图标订单。 请注意，如果使用自定义图标，则不能设置此设置。
 
-      <span data-ttu-id="60484-120">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60484-120">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: reverseIconOrder
     fullName: reverseIconOrder
     langs:
@@ -175,9 +175,9 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.IconSetConditionalFormat#set:member(1)'
-    summary: '<span data-ttu-id="60484-121">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="60484-121">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="60484-122">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="60484-122">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="60484-123">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="60484-123">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.IconSetConditionalFormat): void`
     name: 'set(properties, options)'
@@ -193,15 +193,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="60484-124">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="60484-124">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.IconSetConditionalFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="60484-125">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="60484-125">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
             - 'excel!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.IconSetConditionalFormat#set:member(2)'
-    summary: '<span data-ttu-id="60484-126">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="60484-126">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -220,9 +220,9 @@ items:
             - 'excel!Excel.IconSetConditionalFormat:class'
   - uid: 'excel!Excel.IconSetConditionalFormat#showIconOnly:member'
     summary: |-
-      <span data-ttu-id="60484-127">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="60484-127">If true, hides the values and only shows icons.</span></span>
+      如果为 true，则隐藏值并仅显示图标。
 
-      <span data-ttu-id="60484-128">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60484-128">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showIconOnly
     fullName: showIconOnly
     langs:
@@ -235,23 +235,23 @@ items:
           - boolean
   - uid: 'excel!Excel.IconSetConditionalFormat#style:member'
     summary: |-
-      <span data-ttu-id="60484-129">如果设置，则显示条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="60484-129">If set, displays the IconSet option for the conditional format.</span></span>
+      如果设置，则显示条件格式的 IconSet 选项。
 
-      <span data-ttu-id="60484-130">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60484-130">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
       - typeScript
     type: property
     syntax:
-      content: 'style: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon";'
+      content: 'style: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes";'
       return:
         type:
           - 'excel!Excel.IconSetConditionalFormat#style~0:complex'
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="60484-131">示例</span><span class="sxs-lookup"><span data-stu-id="60484-131">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```typescript
           await Excel.run(async (context) => {
@@ -294,7 +294,7 @@ items:
           });
           ```
   - uid: 'excel!Excel.IconSetConditionalFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="60484-132">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="60484-132">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="60484-133">.</span><span class="sxs-lookup"><span data-stu-id="60484-133"></span></span> <span data-ttu-id="60484-134">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="60484-134"></span></span><!-- --><span data-ttu-id="60484-135">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 IconSetConditionalFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.IconSetConditionalFormatData`</span><span class="sxs-lookup"><span data-stu-id="60484-135">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.IconSetConditionalFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.IconSetConditionalFormatData`</span></span><!-- --><span data-ttu-id="60484-136">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="60484-136">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 IconSetConditionalFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.IconSetConditionalFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -329,13 +329,13 @@ references:
   - uid: 'excel!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.IconSetConditionalFormat#style~0:complex'
-    name: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
-    fullName: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
+    name: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes"
+    fullName: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes"
     spec.typeScript:
       - uid: 'excel!Excel.IconSet:enum'
         name: Excel.IconSet
         fullName: Excel.IconSet
-      - name: ' | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"'
-        fullName: ' | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"'
+      - name: ' | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes"'
+        fullName: ' | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes"'
   - uid: 'excel!Excel.Interfaces.IconSetConditionalFormatData:interface'
     name: Excel.Interfaces.IconSetConditionalFormatData
